Update one line at collate

--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -260,7 +260,7 @@ public class RedoCommand extends Command {
 ###### \java\seedu\doist\logic\commands\RemoveAliasCommand.java
 ``` java
 /**
- * Adds an alias for an existing command
+ * Remove the specified alias, if it exists
  */
 public class RemoveAliasCommand extends Command {
     public static final String DEFAULT_COMMAND_WORD = "remove_alias";
