Added cleanup code to collate

--- a/collated/main/A0146809W.md
+++ b/collated/main/A0146809W.md
@@ -79,7 +79,6 @@ public class AddCommand extends Command {
         return COMMAND_WORD;
     }
 
-
     public static String getParameter() {
         return COMMAND_PARAMETER;
     }
@@ -155,11 +154,13 @@ public class CommandResult {
 
         List<ReadOnlyTask> tasksList = new ArrayList<>(tasksSet);
 
+        //from 1st task to 2nd last task
         for (int i = 0; i < tasksList.size() - 1; i++) {
             builder.append(tasksList.get(i).getName());
             builder.append(", ");
         }
 
+        //last task
         builder.append(tasksList.get(tasksList.size() - 1).getName());
 
         return builder.toString();
@@ -596,6 +597,9 @@ import seedu.doit.logic.commands.IncorrectCommand;
  */
 public class AddCommandParser implements CommandParser {
 
+    private final String LOW_PRIORITY = "low";
+    private final String EMPTY_STRING = "";
+
     /**
      * Parses the given {@code String} of arguments in the context of the AddCommand
      * and returns an AddCommand object for execution.
@@ -609,10 +613,10 @@ public class AddCommandParser implements CommandParser {
         try {
             return new AddCommand(
                 argsTokenizer.getPreamble().get(),
-                argsTokenizer.getValue(PREFIX_PRIORITY).orElse("low"),
-                argsTokenizer.getValue(PREFIX_START).orElse(""),
-                argsTokenizer.getValue(PREFIX_END).orElse(""),
-                argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(""),
+                argsTokenizer.getValue(PREFIX_PRIORITY).orElse(LOW_PRIORITY),
+                argsTokenizer.getValue(PREFIX_START).orElse(EMPTY_STRING),
+                argsTokenizer.getValue(PREFIX_END).orElse(EMPTY_STRING),
+                argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(EMPTY_STRING),
                 ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))
             );
         } catch (NoSuchElementException nsee) {
@@ -630,38 +634,20 @@ public class AddCommandParser implements CommandParser {
      * Returns all values of given prefix after the prefix.
      */
     public Optional<List<String>> getAllValuesAfterPrefixAndSpaces(Prefix prefix) {
+        final int FIRST_INDEX = 0;
+        final String EMPTY_STRING = "";
+        final String WHITE_SPACE_STRING = " ";
         if (!this.tokenizedArguments.containsKey(prefix)) {
             return Optional.empty();
         }
         List<String> values = new ArrayList<>(this.tokenizedArguments.get(prefix));
-        values.set(0, values.get(0).replaceFirst(prefix.toString(), ""));
-        String[] allArguments = values.remove(0).split(" ");
+        values.set(FIRST_INDEX, values.get(FIRST_INDEX).replaceFirst(prefix.toString(), EMPTY_STRING));
+        String[] allArguments = values.remove(FIRST_INDEX).split(WHITE_SPACE_STRING);
         for (int i = 0; i < allArguments.length; i++) {
             values.add(allArguments[i]);
         }
         return Optional.of(values);
     }
-```
-###### /java/seedu/doit/logic/parser/CliSyntax.java
-``` java
-/**
- * Contains Command Line Interface (CLI) syntax definitions common to multiple commands
- */
-public class CliSyntax {
-
-    /* Prefix definitions */
-    public static final Prefix PREFIX_NAME = new Prefix("n/");
-    public static final Prefix PREFIX_PRIORITY = new Prefix("p/");
-    public static final Prefix PREFIX_START = new Prefix("s/");
-    public static final Prefix PREFIX_END = new Prefix("e/");
-    public static final Prefix PREFIX_DESCRIPTION = new Prefix("d/");
-    public static final Prefix PREFIX_TAG = new Prefix("t/");
-
-    /* Patterns definitions */
-    public static final Pattern KEYWORDS_ARGS_FORMAT =
-        Pattern.compile("(?<keywords>\\S+(?:\\s+\\S+)*)"); // one or more keywords separated by whitespace
-
-}
 ```
 ###### /java/seedu/doit/logic/parser/DateTimeParser.java
 ``` java
@@ -976,43 +962,6 @@ public class MarkCommandParser implements CommandParser {
     }
 
 }
-```
-###### /java/seedu/doit/logic/parser/ParserUtil.java
-``` java
-
-    /**
-     * Returns a set of specified indexes in the {@code command} if it is a set of positive unsigned integers
-     * Returns an {@code Optional.empty()} otherwise.
-     */
-    public static Set<Integer> parseIndexes(String args) {
-        Pattern indexesPattern = Pattern.compile("((\\d+|\\d+-\\d+)?[ ]*)+");
-        Matcher matcher = indexesPattern.matcher(args.trim());
-
-        Set<Integer> emptySet = new HashSet<>();
-        Set<Integer> taskNumSet = new HashSet<>();
-
-        if (!matcher.matches()) {
-            return emptySet;
-        }
-
-        String[] taskNumStringArr = args.split(" ");
-        for (String taskNumString : taskNumStringArr) {
-            if (taskNumString.matches("\\d+")) {
-                taskNumSet.add(Integer.parseInt(taskNumString));
-            } else if (taskNumString.matches("\\d+-\\d+")) {
-                String[] startAndEndIndexes = taskNumString.split("-");
-                int startIndex = Integer.parseInt(startAndEndIndexes[0]);
-                int endIndex = Integer.parseInt(startAndEndIndexes[1]);
-                taskNumSet.addAll(IntStream.rangeClosed(startIndex, endIndex).boxed().collect(Collectors.toSet()));
-            }
-        }
-
-        if (taskNumSet.remove(0)) {
-            return emptySet;
-        }
-        return taskNumSet;
-    }
-
 ```
 ###### /java/seedu/doit/logic/parser/SortCommandParser.java
 ``` java
