--- a/collated/main/A0160076L.md
+++ b/collated/main/A0160076L.md
@@ -22,6 +22,7 @@ import seedu.doit.model.item.ReadOnlyTask;
 public class EventListPanel extends UiPart<Region> {
     private static final String FXML = "EventListPanel.fxml";
     private final Logger logger = LogsCenter.getLogger(EventListPanel.class);
+    private static final double BOUNDARY_PARAMETER = 0.0;
 
     private static ObservableList<ReadOnlyTask> mainTaskList;
     @FXML
@@ -43,7 +44,8 @@ public class EventListPanel extends UiPart<Region> {
 
     private void addToPlaceholder(AnchorPane placeHolderPane) {
         SplitPane.setResizableWithParent(placeHolderPane, false);
-        FxViewUtil.applyAnchorBoundaryParameters(getRoot(), 0.0, 0.0, 0.0, 0.0);
+        FxViewUtil.applyAnchorBoundaryParameters(getRoot(),
+                BOUNDARY_PARAMETER, BOUNDARY_PARAMETER, BOUNDARY_PARAMETER, BOUNDARY_PARAMETER);
         placeHolderPane.getChildren().add(getRoot());
     }
 
@@ -108,6 +110,7 @@ import seedu.doit.model.item.ReadOnlyTask;
 public class FloatingTaskListPanel extends UiPart<Region> {
     private static final String FXML = "FloatingTaskListPanel.fxml";
     private final Logger logger = LogsCenter.getLogger(FloatingTaskListPanel.class);
+    private static final double BOUNDARY_PARAMETER = 0.0;
 
     private static ObservableList<ReadOnlyTask> mainTaskList;
     @FXML
@@ -130,7 +133,8 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 
     private void addToPlaceholder(AnchorPane placeHolderPane) {
         SplitPane.setResizableWithParent(placeHolderPane, false);
-        FxViewUtil.applyAnchorBoundaryParameters(getRoot(), 0.0, 0.0, 0.0, 0.0);
+        FxViewUtil.applyAnchorBoundaryParameters(getRoot(),
+                BOUNDARY_PARAMETER, BOUNDARY_PARAMETER, BOUNDARY_PARAMETER, BOUNDARY_PARAMETER);
         placeHolderPane.getChildren().add(getRoot());
     }
 
@@ -276,7 +280,87 @@ public class HelpWindow extends UiPart<Region> {
             .forEach(m -> commandList.add(m));
     }
 }
-//@@
+```
+###### /java/seedu/doit/ui/MainWindow.java
+``` java
+    public MainWindow(Stage primaryStage, Config config, UserPrefs prefs, Logic logic) {
+        super(FXML);
+
+        // Set dependencies
+        this.primaryStage = primaryStage;
+        this.logic = logic;
+        this.config = config;
+
+        // Configure the UI
+        setTitle(config.getAppTitle());
+        setIcon(ICON);
+        setWindowMinSize();
+        setWindowDefaultSize(prefs);
+        this.scene = new Scene(getRoot());
+        primaryStage.setScene(this.scene);
+        setAccelerators();
+        handleKeyEvents();
+    }
+
+    public Stage getPrimaryStage() {
+        return this.primaryStage;
+    }
+
+    private void setAccelerators() {
+        setAccelerator(this.helpMenuItem, KeyCombination.valueOf("F1"));
+    }
+
+    public void handleKeyEvents() {
+        this.scene.addEventFilter(KeyEvent.KEY_PRESSED, new EventHandler<KeyEvent>() {
+            KeyCombination undo = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
+            KeyCombination undoMac = new KeyCodeCombination(KeyCode.Z, KeyCombination.META_DOWN);
+            KeyCombination redo = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
+            KeyCombination redoMac = new KeyCodeCombination(KeyCode.Y, KeyCombination.META_DOWN);
+
+            @Override
+            public void handle(KeyEvent event) {
+                Boolean hasCommandException = false;
+                //handle undo shortcut key pressed
+                if (this.undo.match(event) || this.undoMac.match(event)) {
+                    // handle command failure
+                    try {
+                        MainWindow.this.logic.execute(UNDO_COMMAND);
+                    } catch (CommandException e) {
+                        MainWindow.this.logger.info("Invalid command: " + UNDO_COMMAND);
+                        raise(new NewResultAvailableEvent(e.getMessage()));
+                        hasCommandException = true;
+                    }
+                    if (!hasCommandException) {
+                        raise(new NewResultAvailableEvent(UndoCommand.MESSAGE_SUCCESS));
+                    }
+                }
+                //handle redo shortcut key pressed
+                if (this.redo.match(event) || this.redoMac.match(event)) {
+                    // handle command failure
+                    try {
+                        MainWindow.this.logic.execute(REDO_COMMAND);
+                    } catch (CommandException e) {
+                        MainWindow.this.logger.info("Invalid command: " + REDO_COMMAND);
+                        raise(new NewResultAvailableEvent(e.getMessage()));
+                        hasCommandException = true;
+                    }
+                    if (!hasCommandException) {
+                        raise(new NewResultAvailableEvent(RedoCommand.MESSAGE_SUCCESS));
+                    }
+                }
+                //handle list shortcut key pressed
+                if (event.getCode().equals(KeyCode.ESCAPE)) {
+                    try {
+                        MainWindow.this.logic.execute(LIST_COMMAND);
+                    } catch (CommandException e) {
+                    }
+                    if (!hasCommandException) {
+                        raise(new NewResultAvailableEvent(ListCommand.MESSAGE_SUCCESS));
+                    }
+                }
+            }
+        });
+    }
 ```
 ###### /java/seedu/doit/ui/MainWindow.java
 ``` java
@@ -363,20 +447,26 @@ public class HelpWindow extends UiPart<Region> {
         return !currentDateTime.isBefore(dateTimeToCompare.minusDays(3));
     }
 
+    /*
+     * show desciption icon on task card if the task has description
+     */
     private void setDescriptionSign(ReadOnlyTask task) {
         this.description = new Image(descriptionSource);
         this.descriptionSign.setImage(this.description);
-
         if (task.getDescription() != null && !task.getDescription().toString().equals("")) {
             this.descriptionSign.setVisible(true);
         } else {
             this.descriptionSign.setVisible(false);
         }
     }
+
     private void initTags(ReadOnlyTask task) {
         task.getTags().forEach(tag -> this.tags.getChildren().add(new Label(tag.tagName)));
     }
 
+    /*
+     * set bullet color indicate different priority level
+     */
     private void setLabelBullet(ReadOnlyTask task) {
         this.labelBullet.setOpacity(1);
         this.tick = new Image(tickSource);
