added Task test cases

--- a/collated/test/A0164032U.md
+++ b/collated/test/A0164032U.md
@@ -111,7 +111,7 @@ public class HelpWindowTest extends AddressBookGuiTest {
         TestDataHelper helper = new TestDataHelper();
         Task toBeAdded = helper.adam();
         YTomorrow expectedAB = new YTomorrow();
-        expectedAB.addPerson(toBeAdded);
+        expectedAB.addTask(toBeAdded);
 
         // execute command and verify result
         assertCommandSuccess(helper.generateAddCommand(toBeAdded),
@@ -141,7 +141,7 @@ public class HelpWindowTest extends AddressBookGuiTest {
         List<Task> threePersons = helper.generatePersonList(3);
 
         YTomorrow expectedAB = helper.generateAddressBook(threePersons);
-        expectedAB.removePerson(threePersons.get(1));
+        expectedAB.removeTask(threePersons.get(1));
         helper.addToModel(model, threePersons);
 
         assertCommandSuccess("delete 2",
@@ -327,7 +327,7 @@ public class HelpWindowTest extends AddressBookGuiTest {
     public static void loadAddressBookWithSampleData(YTomorrow ab) {
         for (TestPerson person : new TypicalTestPersons().getTypicalPersons()) {
             try {
-                ab.addPerson(new Task(person));
+                ab.addTask(new Task(person));
             } catch (UniqueTaskList.DuplicateTaskException e) {
                 assert false : "not possible";
             }
@@ -381,7 +381,9 @@ public class TestPerson implements ReadOnlyTask {
         this.group = group;
     }
 
-    //@@ author A0164032U
+```
+###### /java/seedu/address/testutil/TestPerson.java
+``` java
     public void setStartDate(StartDate start) {
         this.start = start;
     }
@@ -417,7 +419,7 @@ public class TestPerson implements ReadOnlyTask {
 
     @Override
     public UniqueTagList getTags() {
-    	return new UniqueTagList(tags);
+        return new UniqueTagList(tags);
     }
 
     @Override
@@ -428,24 +430,27 @@ public class TestPerson implements ReadOnlyTask {
     public String getAddCommand() {
         StringBuilder sb = new StringBuilder();
         sb.append("add " + this.getName().fullName + " ");
-        sb.append("s/" + this.getStartDate().getInputValue() + " ");
-        sb.append("d/" + this.getEndDate().getInputValue() + " ");
-        sb.append("g/" + this.getGroup().value + " ");
+        sb.append("from " + this.getStartDate().getInputValue() + " ");
+        sb.append("to " + this.getEndDate().getInputValue() + " ");
+        sb.append("in " + this.getGroup().value + " ");
         return sb.toString();
     }
 
     @Override
-	public boolean hasPassed() {
+    public boolean hasPassed() {
         return false;
     }
 
     @Override
-	public java.util.Date getEndTime() {
-        return null;
+    public java.util.Date getEndTime() {
+        if (end != null) {
+            return end.getTime();
+        }
+        return new java.util.Date(Long.MAX_VALUE);
     }
 
     @Override
-	public java.util.Date getStartTime() {
+    public java.util.Date getStartTime() {
         return null;
     }
 }
