--- a/collated/test/A0164889E.md
+++ b/collated/test/A0164889E.md
@@ -51,16 +51,28 @@
     public String getGroup() {
         return getTextFromLabel(GROUP_FIELD_ID);
     }
+
 ```
 ###### /java/guitests/guihandles/PersonCardHandle.java
 ``` java
     public String getStartDate() {
-        return getTextFromLabel(STARTDATE_FIELD_ID);
-    }
+        String startDateField = getTextFromLabel(STARTDATE_FIELD_ID);
+        String[] parts = startDateField.split(" +");
+        String start = parts[0]; //Starts:
+        String date = parts[1]; //01.01
+        return date;
+     }
 
+```
+###### /java/guitests/guihandles/PersonCardHandle.java
+``` java
     public String getEndDate() {
-        return getTextFromLabel(ENDDATE_FIELD_ID);
-    }
+        String endDateField = getTextFromLabel(ENDDATE_FIELD_ID);
+        String[] parts = endDateField.split(" +");
+        String end = parts[0]; //ends:
+        String date = parts[1]; //01.01
+        return date;
+     }
 
     public List<String> getTags() {
         return getTags(getTagsContainer());
@@ -88,10 +100,10 @@
 
     public boolean isSamePerson(ReadOnlyTask person) {
         return getFullName().equals(person.getName().fullName)
-                && getStartDate().equals(person.getStartDate())
-                && getEndDate().equals(person.getEndDate())
-                && getGroup().equals(person.getGroup().value)
-                && getTags().equals(getTags(person.getTags()));
+                && getStartDate().equals(person.getStartDate().getInputValue())
+                && getEndDate().equals(person.getEndDate().getInputValue())
+                && getGroup().equals(person.getGroup().value);
+                //&& getTags().equals(getTags(person.getTags()));
     }
 
     @Override
@@ -101,8 +113,8 @@
             return getFullName().equals(handle.getFullName())
                     && getStartDate().equals(handle.getStartDate())
                     && getEndDate().equals(handle.getEndDate())
-                    && getGroup().equals(handle.getGroup())
-                    && getTags().equals(handle.getTags());
+                    && getGroup().equals(handle.getGroup());
+                    //&& getTags().equals(handle.getTags());
         }
         return super.equals(obj);
     }
