--- a/collated/test/A0163848R.md
+++ b/collated/test/A0163848R.md
@@ -56,8 +56,21 @@ public class TaskFactoryTest {
                     UniqueTagList.build());
         } catch (IllegalValueException e) {
             e.printStackTrace();
+            assertTrue(false);
         }
-        assertFalse(task != null);
+
+     // Test: End date before start date
+        try {
+            task = Task.factory(
+                    new Name("Go to the beach"),
+                    new Group("Vacation"),
+                    new StartDate("tomorrow"),
+                    new EndDate("today"),
+                    UniqueTagList.build());
+        } catch (IllegalValueException e) {
+            e.printStackTrace();
+            assertTrue(false);
+        }
 
         // Test: without required field (UniqueTagList)
         try {
