fix typo in @@author and recollate

--- a/collated/main/A0139845R.md
+++ b/collated/main/A0139845R.md
@@ -53,6 +53,23 @@
         return COMMAND_WORD;
     }
 ```
+###### \java\seedu\watodo\logic\commands\Command.java
+``` java
+    /**
+     * Returns Command Name e.g. add
+     */
+    @Override
+    public abstract String toString();
+
+    public void unexecute() {
+
+    }
+
+    public void redo() {
+
+    }
+
+```
 ###### \java\seedu\watodo\logic\commands\MarkCommand.java
 ``` java
 
@@ -251,25 +268,17 @@ public class UndoCommand extends Command {
 ``` java
     /* Constructs a Floating Task object from a given description. With Status */
     public Task(Description description, UniqueTagList tags, TaskStatus newStatus) {
-        this(description, null, null, tags, newStatus);
-        this.taskType = TaskType.FLOAT;
+        this(description, null, null, tags, newStatus, TaskType.FLOAT);
     }
 
     /* Constructs a Deadline Task object from a given description. With status. */
     public Task(Description description, DateTime deadline, UniqueTagList tags, TaskStatus newStatus) {
-        this(description, null, deadline, tags, newStatus);
-        this.taskType = TaskType.DEADLINE;
+        this(description, null, deadline, tags, newStatus, TaskType.DEADLINE);
     }
 
     /* Constructs an Event Task object from a given description. With status */
     public Task(Description description, DateTime startDate, DateTime endDate, UniqueTagList tags, TaskStatus status) {
-        assert !CollectionUtil.isAnyNull(description, tags);
-        this.description = description;
-        this.startDate = startDate;
-        this.endDate = endDate;
-        this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
-        this.status = status;
-        this.taskType = TaskType.EVENT;
+        this(description, startDate, endDate, tags, status, TaskType.EVENT);
     }
 
 ```
