--- a/collated/main/A0143076J.md
+++ b/collated/main/A0143076J.md
@@ -232,6 +232,56 @@ public class ShortcutCommand extends Command {
 }
 
 ```
+###### \java\seedu\watodo\logic\commands\ViewShortcutsCommand.java
+``` java
+/**
+ * Shows user a list of all the command words for each of the standard commands.
+ */
+public class ViewShortcutsCommand extends Command {
+
+    public static final String COMMAND_WORD = "viewshortcuts";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Shows a list of all shortcut commands.\n"
+            + "Example: " + COMMAND_WORD;
+
+    public static final String VIEW_SHORTCUT_MESSAGE = "%1$s\nAll shortcuts shown.";
+
+
+    @Override
+    public CommandResult execute() throws CommandException {
+
+        LinkedHashMap<String, ArrayList<String>> commandShortcuts = collateShortcutkeys();
+
+        StringBuilder sb = formatForView(commandShortcuts);
+
+        return new CommandResult(String.format(VIEW_SHORTCUT_MESSAGE, sb.toString()));
+    }
+
+    /** Collects all the shortcut keys and alternative command words for each of the standard command words */
+    private LinkedHashMap<String, ArrayList<String>> collateShortcutkeys() {
+        AlternativeCommandsLibrary.altCommands.values().removeIf(Objects::isNull);
+        LinkedHashMap<String, ArrayList<String>> commandShortcuts = new LinkedHashMap<String, ArrayList<String>>();
+        for (String cmdWord : AlternativeCommandsLibrary.COMMANDS_WORDS) {
+            commandShortcuts.put(cmdWord, new ArrayList<String>());
+        }
+        return commandShortcuts;
+    }
+
+    /** Formats the list of shortcuts and alternative command words for displaying to the user  */
+    private StringBuilder formatForView(LinkedHashMap<String, ArrayList<String>> commandShortcuts) {
+        StringBuilder sb = new StringBuilder();
+        AlternativeCommandsLibrary.altCommands.forEach((shortcut, cmdWord)
+            -> commandShortcuts.get(cmdWord).add(shortcut));
+        commandShortcuts.forEach((cmdWord, shortcuts) -> sb.append(cmdWord + ": " + shortcuts + "\n"));
+        return sb;
+    }
+
+    @Override
+    public String toString() {
+        return COMMAND_WORD;
+    }
+}
+```
 ###### \java\seedu\watodo\logic\parser\AddCommandParser.java
 ``` java
 /**
@@ -667,12 +717,29 @@ public class TagsParser {
 
 }
 ```
+###### \java\seedu\watodo\model\Model.java
+``` java
+    /** Updates each of the tasks' status to Overdue if current Date is later than their endDates */
+    void updateTasksStatus();
+
+}
+```
 ###### \java\seedu\watodo\model\ModelManager.java
 ``` java
     private void loadAlternativeComamnds(HashMap<String, String> alternativeCommands) {
         AlternativeCommandsLibrary.altCommands = alternativeCommands;
     }
 
+```
+###### \java\seedu\watodo\model\ModelManager.java
+``` java
+    @Override
+    public void updateTasksStatus() {
+        taskManager.updateTasksStatus();
+        resetData(taskManager);
+        indicateTaskManagerChanged();
+    }
+}
 ```
 ###### \java\seedu\watodo\model\task\DateTime.java
 ``` java
@@ -714,8 +781,7 @@ public class DateTime {
 
     /**
      * Converts the given string into a standard Date format of year, month, date, hour, minutes and seconds.
-     * Precondition: the String dat
-     * eTime has already been checked to be valid
+     * Precondition: the String dateTime has already been checked to be valid
      */
     private Calendar convertToCalendarFormat(String dateString) {
         List<DateGroup> parsedDateGroups = DATE_TIME_PARSER.parse(dateString);
@@ -829,29 +895,49 @@ public class DateTime {
 ``` java
     /* Constructs a Floating Task object from a given description. */
     public Task(Description description, UniqueTagList tags) {
-        this(description, null, null, tags);
-        this.taskType = TaskType.FLOAT;
+        this(description, null, null, tags, TaskStatus.UNDONE, TaskType.FLOAT);
     }
 
     /* Constructs a Deadline Task object from a given description. */
     public Task(Description description, DateTime deadline, UniqueTagList tags) {
-        this(description, null, deadline, tags);
-        this.taskType = TaskType.DEADLINE;
+        this(description, null, deadline, tags, TaskStatus.UNDONE, TaskType.DEADLINE);
     }
 
     /* Constructs an Event Task object from a given description. */
     public Task(Description description, DateTime startDate, DateTime endDate, UniqueTagList tags) {
+        this(description, startDate, endDate, tags, TaskStatus.UNDONE, TaskType.EVENT);
+    }
 
+    public Task(Description description, DateTime startDate, DateTime endDate, UniqueTagList tags,
+            TaskStatus status, TaskType type) {
         assert !CollectionUtil.isAnyNull(description, tags);
         this.description = description;
         this.startDate = startDate;
         this.endDate = endDate;
         this.tags = new UniqueTagList(tags); // protect internal tags from changes in the arg list
-        this.taskType = TaskType.EVENT;
+        this.status = status;
+        this.taskType = type;
     }
 
 ```
-
+###### \java\seedu\watodo\model\task\UniqueTaskList.java
+``` java
+    /**
+     * Updates each of the tasks' status to Overdue if it is an event or deadline task that
+     * has not been marked done and the endDate has passed from current date
+     */
+    public void updateTasksStatus() {
+        Date currDate = new Date();
+        for (int i = 0; i < internalList.size(); i++) {
+            Task task = internalList.get(i);
+            if (!task.getStatus().equals(TaskStatus.DONE)
+                    && task.getEndDate() != null && !task.getEndDate().isLater(currDate)) {
+                task.setStatus(TaskStatus.OVERDUE);
+            }
+        }
+    }
+}
+```
 ###### \java\seedu\watodo\model\UserPrefs.java
 ``` java
     public HashMap<String, String> getAlternativeCommands() {
