--- a/collated/main/A0141077L.md
+++ b/collated/main/A0141077L.md
@@ -114,8 +114,8 @@ public class MarkCommand extends Command {
             throws CommandException, UniqueTaskList.DuplicateTaskException {
         this.taskToMark = getTaskToMark(currIndex, lastShownList);
         this.markedTask = createMarkedCopyOfTask(this.taskToMark);
-        updateTaskListAtIndex(currIndex, this.markedTask);
-        storeTasksForUndo(this.taskToMark, this.markedTask);
+        updateTaskListAtIndex(currIndex, markedTask);
+        storeTasksForUndo(taskToMark, markedTask);
     }
 
     private ReadOnlyTask getTaskToMark(int currIndex, UnmodifiableObservableList<ReadOnlyTask> lastShownList) {
@@ -165,8 +165,8 @@ public class SaveAsCommand extends Command {
 
     public static final String COMMAND_WORD = "saveas";
 
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Creates a copy of the current task list "
-            + "to the new specified file path and uses that file path.\n"
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Saves the task list data to the "
+            + "new specified file path and loads task list from that location in the future.\n"
             + "File path must end with .xml\n"
             + "Parameters: FILE_PATH\n"
             + "Example: " + COMMAND_WORD + " data/watodo2.xml";
